--- a/src/sample/CMakeLists.txt
+++ b/src/sample/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.12)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(serial_port_sample test_io.cpp)
+add_executable(serial_port_sample test_break_read.cpp)
 target_link_libraries(serial_port_sample serial_port_async)
